--- a/fintrac/src/main/resources/application.properties
+++ b/fintrac/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12643951
+spring.datasource.username=sql12643951
+spring.datasource.password=ulu7dbwWuv
